// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniParcColumnConfiguration component should render column "CDD": CDD 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "FunFam": FunFam 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "Gene3D": Gene3D 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "HAMAP": HAMAP 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "NCBIfam": NCBIfam 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "PANTHER": PANTHER 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "PIRSF": PIRSF 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "PRINTS": PRINTS 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "PROSITE": PROSITE 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "Pfam": Pfam 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span
        title="Virion membrane protein, poxvirus L1-related"
      >
        <a
          class="external-link"
          href="https://www.ebi.ac.uk/interpro/entry/pfam/PF02442"
          rel="noopener"
          target="_blank"
        >
          PF02442
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
         ( 
        <a
          class="external-link"
          href="https://www.ebi.ac.uk/interpro/entry/InterPro/IPR003472/"
          rel="noopener"
          target="_blank"
        >
          IPR003472
          <test-file-stub
            data-testid="external-link-icon"
            width="12.5"
          />
        </a>
        )
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "SFLD": SFLD 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "SMART": SMART 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "SUPFAM": SUPFAM 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "accession": accession 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span>
        P07612.1 (obsolete)
      </span>
    </li>
    <li>
      <a
        href="/uniprotkb/Q71TT2"
      >
        Q71TT2
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/P07612"
      >
        P07612
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/Q76QK2"
      >
        Q76QK2
      </a>
    </li>
    <li>
      <span>
        Q76ZT7.1 (obsolete)
      </span>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        5 more entries
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "accession": accession-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span>
        P07612.1 (obsolete)
      </span>
    </li>
    <li>
      <a
        href="/uniprotkb/Q71TT2"
      >
        Q71TT2
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/P07612"
      >
        P07612
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/Q76QK2"
      >
        Q76QK2
      </a>
    </li>
    <li>
      <span>
        Q76ZT7.1 (obsolete)
      </span>
    </li>
    <li>
      <a
        href="/uniprotkb/Q0GNZ6"
      >
        Q0GNZ6
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A2I2MDI1"
      >
        A0A2I2MDI1
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/Q6RZL4"
      >
        Q6RZL4
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/G0XTE8"
      >
        G0XTE8
      </a>
    </li>
    <li>
      <span>
        A0A7I8V511.1 (obsolete)
      </span>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Fewer entries
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "checksum": checksum 1`] = `
<DocumentFragment>
  28FE89850863372D
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "common_taxon_ids": common_taxon_ids 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/32630"
      >
        32630
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/9606"
      >
        9606
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10242"
      >
        10242
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "common_taxons": common_taxons 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/32630"
      >
        synthetic construct
      </a>
       (other entries)
    </li>
    <li>
      <a
        href="/taxonomy/9606"
      >
        Homo sapiens
      </a>
       (cellular organisms)
    </li>
    <li>
      <a
        href="/taxonomy/10242"
      >
        Orthopoxvirus
      </a>
       (Viruses)
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "first_seen": first_seen 1`] = `
<DocumentFragment>
  <time
    datetime="1988-11-01"
  >
    1988-11-01
  </time>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "from": from 1`] = `<DocumentFragment />`;

exports[`UniParcColumnConfiguration component should render column "gene": gene 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span>
        OPG099
      </span>
    </li>
    <li>
      <span>
        RPXV077
      </span>
    </li>
    <li>
      <span>
        N1R
      </span>
    </li>
    <li>
      <span>
        L1R
      </span>
    </li>
    <li>
      <span>
        HSPV_VK05_RKI-089
      </span>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        17 more gene names
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "gene": gene-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <span>
        OPG099
      </span>
    </li>
    <li>
      <span>
        RPXV077
      </span>
    </li>
    <li>
      <span>
        N1R
      </span>
    </li>
    <li>
      <span>
        L1R
      </span>
    </li>
    <li>
      <span>
        HSPV_VK05_RKI-089
      </span>
    </li>
    <li>
      <span>
        CPXV_FIN2000_MAN_093
      </span>
    </li>
    <li>
      <span>
        VACV VK01 RKI-115 CDS
      </span>
    </li>
    <li>
      <span>
        OPG095
      </span>
    </li>
    <li>
      <span>
        OCZ32_gp108
      </span>
    </li>
    <li>
      <span>
        VACWR088
      </span>
    </li>
    <li>
      <span>
        VACV_TT8_108
      </span>
    </li>
    <li>
      <span>
        VACV_TT12_108
      </span>
    </li>
    <li>
      <span>
        VAC_TKT3_078
      </span>
    </li>
    <li>
      <span>
        VAC_TKT4_078
      </span>
    </li>
    <li>
      <span>
        VACV_IOC_B141_114
      </span>
    </li>
    <li>
      <span>
        VACV_IOC_B388_114
      </span>
    </li>
    <li>
      <span>
        LIVPclone14_096
      </span>
    </li>
    <li>
      <span>
        VACV_VK01_RKI-115
      </span>
    </li>
    <li>
      <span>
        VACV_VK02_RKI-092
      </span>
    </li>
    <li>
      <span>
        VACV_VK08_RKI-108
      </span>
    </li>
    <li>
      <span>
        VACV_VK12_RKI-121
      </span>
    </li>
    <li>
      <span>
        VACV_MFDV-1902_109
      </span>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Fewer gene names
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "last_seen": last_seen 1`] = `
<DocumentFragment>
  <time
    datetime="2024-11-27"
  >
    2024-11-27
  </time>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "length": length 1`] = `
<DocumentFragment>
  250
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "organism": organism 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/10254"
        title="Vaccinia virus (strain Western Reserve) (VACV), taxon ID 10254"
        translate="no"
      >
        Vaccinia virus (strain Western Reserve) (VACV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/45417"
        title="Rabbitpox virus (strain Utrecht) (RPV), taxon ID 45417"
        translate="no"
      >
        Rabbitpox virus (strain Utrecht) (RPV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/265871"
        title="Cowpox virus (strain GRI-90 / Grishak) (CPV), taxon ID 265871"
        translate="no"
      >
        Cowpox virus (strain GRI-90 / Grishak) (CPV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10245"
        title="Vaccinia virus, taxon ID 10245"
        translate="no"
      >
        Vaccinia virus
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/397342"
        title="Horsepox virus (HSPV), taxon ID 397342"
        translate="no"
      >
        Horsepox virus (HSPV)
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        4 more organisms
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "organism": organism-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/10254"
        title="Vaccinia virus (strain Western Reserve) (VACV), taxon ID 10254"
        translate="no"
      >
        Vaccinia virus (strain Western Reserve) (VACV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/45417"
        title="Rabbitpox virus (strain Utrecht) (RPV), taxon ID 45417"
        translate="no"
      >
        Rabbitpox virus (strain Utrecht) (RPV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/265871"
        title="Cowpox virus (strain GRI-90 / Grishak) (CPV), taxon ID 265871"
        translate="no"
      >
        Cowpox virus (strain GRI-90 / Grishak) (CPV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10245"
        title="Vaccinia virus, taxon ID 10245"
        translate="no"
      >
        Vaccinia virus
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/397342"
        title="Horsepox virus (HSPV), taxon ID 397342"
        translate="no"
      >
        Horsepox virus (HSPV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10243"
        title="Cowpox virus (CPV), taxon ID 10243"
        translate="no"
      >
        Cowpox virus (CPV)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/9606"
        title="Homo sapiens (Human), taxon ID 9606"
        translate="no"
      >
        Homo sapiens (Human)
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/32606"
        title="Rabbitpox virus, taxon ID 32606"
        translate="no"
      >
        Rabbitpox virus
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/32630"
        title="synthetic construct, taxon ID 32630"
        translate="no"
      >
        synthetic construct
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Fewer organisms
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "organism_id": organism_id 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/10254"
        title="Vaccinia virus (strain Western Reserve) (VACV), taxon ID 10254"
        translate="no"
      >
        10254
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/45417"
        title="Rabbitpox virus (strain Utrecht) (RPV), taxon ID 45417"
        translate="no"
      >
        45417
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/265871"
        title="Cowpox virus (strain GRI-90 / Grishak) (CPV), taxon ID 265871"
        translate="no"
      >
        265871
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10245"
        title="Vaccinia virus, taxon ID 10245"
        translate="no"
      >
        10245
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/397342"
        title="Horsepox virus (HSPV), taxon ID 397342"
        translate="no"
      >
        397342
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        4 more organisms
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "organism_id": organism_id-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/taxonomy/10254"
        title="Vaccinia virus (strain Western Reserve) (VACV), taxon ID 10254"
        translate="no"
      >
        10254
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/45417"
        title="Rabbitpox virus (strain Utrecht) (RPV), taxon ID 45417"
        translate="no"
      >
        45417
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/265871"
        title="Cowpox virus (strain GRI-90 / Grishak) (CPV), taxon ID 265871"
        translate="no"
      >
        265871
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10245"
        title="Vaccinia virus, taxon ID 10245"
        translate="no"
      >
        10245
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/397342"
        title="Horsepox virus (HSPV), taxon ID 397342"
        translate="no"
      >
        397342
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/10243"
        title="Cowpox virus (CPV), taxon ID 10243"
        translate="no"
      >
        10243
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/9606"
        title="Homo sapiens (Human), taxon ID 9606"
        translate="no"
      >
        9606
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/32606"
        title="Rabbitpox virus, taxon ID 32606"
        translate="no"
      >
        32606
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/32630"
        title="synthetic construct, taxon ID 32630"
        translate="no"
      >
        32630
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Fewer organisms
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "protein": protein 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
    translate="yes"
  >
    <li>
      <span>
        Entry-fusion complex associated protein OPG095
      </span>
    </li>
    <li>
      <span>
        RPXV077
      </span>
    </li>
    <li>
      <span>
        N1R protein
      </span>
    </li>
    <li>
      <span>
        L1R
      </span>
    </li>
    <li>
      <span>
        HSPV089
      </span>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        10 more protein names
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "protein": protein-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
    translate="yes"
  >
    <li>
      <span>
        Entry-fusion complex associated protein OPG095
      </span>
    </li>
    <li>
      <span>
        RPXV077
      </span>
    </li>
    <li>
      <span>
        N1R protein
      </span>
    </li>
    <li>
      <span>
        L1R
      </span>
    </li>
    <li>
      <span>
        HSPV089
      </span>
    </li>
    <li>
      <span>
        IMV membrane protein
      </span>
    </li>
    <li>
      <span>
        Polyprotein
      </span>
    </li>
    <li>
      <span>
        IMV membrane protein L1R
      </span>
    </li>
    <li>
      <span>
        Myristylated MP IMV
      </span>
    </li>
    <li>
      <span>
        Neutralizing antibody IMV membrane protein target
      </span>
    </li>
    <li>
      <span>
        Neutralizing antibody MV membrane protein
      </span>
    </li>
    <li>
      <span>
        F2 polypeptide
      </span>
    </li>
    <li>
      <span>
        Protein L1
      </span>
    </li>
    <li>
      <span>
        Uncharacterized protein
      </span>
    </li>
    <li>
      <span>
        Hypothetical protein
      </span>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Fewer protein names
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "proteome": proteome 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/proteomes/UP000000344"
      >
        UP000000344
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000137384"
      >
        UP000137384
      </a>
       (Segment)
    </li>
    <li>
      <a
        href="/proteomes/UP000166173"
      >
        UP000166173
      </a>
       (Segment)
    </li>
    <li>
      <a
        href="/proteomes/UP000111173"
      >
        UP000111173
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000113999"
      >
        UP000113999
      </a>
       (Genome)
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        17 more proteomes
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "proteome": proteome-expanded 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/proteomes/UP000000344"
      >
        UP000000344
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000137384"
      >
        UP000137384
      </a>
       (Segment)
    </li>
    <li>
      <a
        href="/proteomes/UP000166173"
      >
        UP000166173
      </a>
       (Segment)
    </li>
    <li>
      <a
        href="/proteomes/UP000111173"
      >
        UP000111173
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000113999"
      >
        UP000113999
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000181229"
      >
        UP000181229
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000181062"
      >
        UP000181062
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000181110"
      >
        UP000181110
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000153808"
      >
        UP000153808
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000097422"
      >
        UP000097422
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000181484"
      >
        UP000181484
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000831909"
      >
        UP000831909
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000831853"
      >
        UP000831853
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000274976"
      >
        UP000274976
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000315999"
      >
        UP000315999
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000501395"
      >
        UP000501395
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000830577"
      >
        UP000830577
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000830584"
      >
        UP000830584
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000830110"
      >
        UP000830110
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000830598"
      >
        UP000830598
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000830701"
      >
        UP000830701
      </a>
       (Genome)
    </li>
    <li>
      <a
        href="/proteomes/UP000829986"
      >
        UP000829986
      </a>
       (Genome)
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        Fewer proteomes
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "sequence": sequence 1`] = `
<DocumentFragment>
  <div>
    <section
      class="sequence-container"
    >
      <div
        class="sequence"
      >
        <span
          class="sequence__chunk"
        >
          MGAAASIQTT
        </span>
        <span
          class="sequence__chunk"
        >
          VNTLSERISS
        </span>
        <span
          class="sequence__chunk"
        >
          KLEQEANASA
        </span>
        <span
          class="sequence__chunk"
        >
          QTKCDIEIGN
        </span>
        <span
          class="sequence__chunk"
        >
          FYIRQNHGCN
        </span>
        <span
          class="sequence__chunk"
        >
          LTVKNMCSAD
        </span>
        <span
          class="sequence__chunk"
        >
          ADAQLDAVLS
        </span>
        <span
          class="sequence__chunk"
        >
          AATETYSGLT
        </span>
        <span
          class="sequence__chunk"
        >
          PEQKAYVPAM
        </span>
        <span
          class="sequence__chunk"
        >
          FTAALNIQTS
        </span>
        <span
          class="sequence__chunk"
        >
          VNTVVRDFEN
        </span>
        <span
          class="sequence__chunk"
        >
          YVKQTCNSSA
        </span>
        <span
          class="sequence__chunk"
        >
          VVDNKLKIQN
        </span>
        <span
          class="sequence__chunk"
        >
          VIIDECYGAP
        </span>
        <span
          class="sequence__chunk"
        >
          GSPTNLEFIN
        </span>
        <span
          class="sequence__chunk"
        >
          TGSSKGNCAI
        </span>
        <span
          class="sequence__chunk"
        >
          KALMQLTTKA
        </span>
        <span
          class="sequence__chunk"
        >
          TTQIAPKQVA
        </span>
        <span
          class="sequence__chunk"
        >
          GTGVQFYMIV
        </span>
        <span
          class="sequence__chunk"
        >
          IGVIILAALF
        </span>
        <span
          class="sequence__chunk"
        >
          MYYAKRMLFT
        </span>
        <span
          class="sequence__chunk"
        >
          STNDKIKLIL
        </span>
        <span
          class="sequence__chunk"
        >
          ANKENVHWTT
        </span>
        <span
          class="sequence__chunk"
        >
          YMDTFFRTSP
        </span>
        <span
          class="sequence__chunk sequence__chunk--display-last"
        >
          MVIATTDMQN
        </span>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "upi": upi 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <a
      class="accession"
      href="/uniparc/UPI0000000001/entry"
    >
      UPI0000000001
    </a>
  </span>
</DocumentFragment>
`;
